# cw-workspace-optimizer-report

./: .gitignore  Cargo.toml  README.md
contracts/hyphen-depth/context/: Cargo.toml
contracts/hyphen-depth/context/examples/: schema.rs
contracts/hyphen-depth/context/src/: contract.rs
crates/msg/: Cargo.toml
crates/msg/src/: state.rs
